iptables/rules.v4
*filter
# This is heavily from Inversoft's 2016 Guide to User Data Security.

# Allow all outgoing, but drop incoming and forwarding packets by default
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Custom per-protocol chains
:UDP - [0:0]
:TCP - [0:0]
:ICMP - [0:0]

# Acceptable incoming UDP traffic
# NTP (Network Time Protocol):
-A UDP -p udp --dport 123 -j ACCEPT

# Acceptable incoming TCP traffic
# SSH:
-A TCP -p tcp --dport 22 -j ACCEPT
# HTTPS:
#-A TCP -p tcp --dport 443 -j ACCEPT
# HTTP:
#-A TCP -p tcp --dport 80 -j ACCEPT
# Arbitrary application ports:
#-A TCP -p tcp --dport 3000 -j ACCEPT
#-A TCP -p tcp --dport 3003 -j ACCEPT

# Acceptable incoming ICMP traffic
# Ping requests:
-A ICMP -p icmp --icmp-type echo-request -j ACCEPT

# Boilerplate acceptance policy
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT

# Drop invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP

# Pass traffic to protocol-specific chains
## Only allow new connections (established and related should already be handled)
## For TCP, additionally only allow new SYN packets since that is the only valid
## method for establishing a new TCP connection
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp --syn -m conntrack --ctstate NEW -j TCP
-A INPUT -p icmp -m conntrack --ctstate NEW -j ICMP

# Commit the changes
COMMIT

*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# Example redirect of incoming Web traffic to an unpriviledged local app.
#-A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 3000
#-A PREROUTING -p tcp --dport 443 -j REDIRECT --to-port 3003

# Commit the changes
COMMIT

*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
